syntax = 'proto3';
package protobuf.wallet;

option go_package = "protobuf/wallet";
import "google/protobuf/empty.proto";

service WalletService{
  rpc CreateWallet(CreateWalletMessage) returns (google.protobuf.Empty);
}

message CreateWalletMessage{
  string code = 1;
  bool is_default = 2;
}